# redis_nginx_adapter

./: .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac  redis_nginx_adapter.c  redis_nginx_adapter.h
example/: Dockerfile  README.md
example/module/: config  nginx.conf  ngx_redis_adapter_example_module.c
